# hatch-monorepo-sandbox

./: .gitignore  Makefile  README.md
my-sandbox-lib/: CHANGES.md  README.md  pyproject.toml
my-sandbox-lib-addon/: CHANGES.md  README.md  pyproject.toml
my-sandbox-tool/: Makefile  README.md  pyproject.toml
my-sandbox-tool/my_sandbox_tool/: cli.py
my_sandbox_lib/: pyproject.toml
my_sandbox_lib_addon/: pyproject.toml
src/: Makefile  README.md  pyproject.toml  pytest.ini
src/my_sandbox_lib/: func.py
src/my_sandbox_lib_addon/: __init__.py  addon_func.py
src/tests/: test_funcs.py
