[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-sandbox-lib"
description = 'My sandbox library'
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ISC" }
keywords = []
authors = []
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "numpy~=1.22",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/manuel-koch/hatch-monorepo-sandbox"
Source = "https://github.com/manuel-koch/hatch-monorepo-sandbox"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."

[tool.hatch.build]
directory = "../dist"

[tool.hatch.build.hooks.vcs]
version-file = "../src/my_sandbox_lib/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["Makefile"]
[tool.hatch.build.targets.sdist.force-include]
"../src/my_sandbox_lib" = "src/my_sandbox_lib"

[tool.hatch.build.targets.wheel]
packages = ["src/my_sandbox_lib"]
