[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-sandbox-tool"
description = 'My sandbox tool'
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ISC" }
keywords = []
authors = []
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "my-sandbox-lib",
  "my-sandbox-lib-addon",
]

[project.scripts]
my-sandbox-tool = "my_sandbox_tool.cli:main"

[project.urls]
Documentation = "https://github.com/manuel-koch/hatch-monorepo-sandbox"
Source = "https://github.com/manuel-koch/hatch-monorepo-sandbox"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]
